--- a/view.html
+++ b/view.html
@@ -13,33 +13,43 @@
   $(function() {
     var ws = io.connect();
     var log = '';
-    var dict = ['hello','world!','I','lov','you♡'];
+    var dict = ['iii%','w','I','l','♡'];
     var dictCount = 0;
     var vibeCount = 0;
+    var vibes = function(data){
+      $('body').append('<div class="vibes" style="color:hsl('+data+',65%,50%);top:'+Math.round(Math.random()*100)+'%;left:'+Math.round(Math.random()*100)+'%;font-size:'+($(".vibes").length+10)+'px;">＿人人人＿<br />＞VIBES!＜<br />‾ＹＹＹＹ‾</div>');
+      $('.vibes').fadeOut(1000, function(){$(this).remove();});
+      vibeCount = ($(".vibes").length>vibeCount)?$(".vibes").length:vibeCount;
+    };
 
-    $('em').text(dict[dictCount]);
+    $('em').text(dict[dictCount].slice(0,-1));
 
     ws.emit('now', dict[dictCount]);
     ws.on('chara', function(data) {
+      if(data=='%'){
+        $('#word span:last').remove();
+      } else {
       log += data;
       $('#word').append('<span class="text">'+data+'</span>');
       $('html,body').animate({ scrollTop: $(document).height() }, 'fast');
-      if(log.match(dict[dictCount])){
-        $('article#congrats').css('display','block').fadeOut(5000);
-        $('article#congrats h3').text('MAX VIBES '+vibeCount+'!!');
+      if(log.match(dict[dictCount].slice(0,-1))){
+        $('article#congrats').css('display','block');
+        $('article#congrats h3 strong').css('font-size', 16+vibeCount+'px').text(vibeCount);
+        for(i=0;i<vibeCount;i++)
+          setTimeout(function(){vibes(Math.round(Math.random()*360));},100*i);
+        setTimeout(function(){$('article#congrats').fadeOut();},3000);
         dictCount = (dict.length> (dictCount+1))? (dictCount+1): 0;
         log = '';
         ws.emit('now', dict[dictCount]);
-        $('em').text(dict[dictCount]);
+        $('em').text(dict[dictCount].slice(0,-1));
         $('.text').fadeOut(2000, function(){$(this).remove();});
         vibeCount = 0;
+      }
       }
     });
 
     ws.on('vibes', function(data) {
-      vibeCount = ($(".vibes").length>vibeCount)?$(".vibes").length:vibeCount;
-      $('body').append('<div class="vibes" style="color:hsl('+data+',50%,50%);top:'+Math.round(Math.random()*100)+'%;left:'+Math.round(Math.random()*100)+'%;font-size:'+($(".vibes").length+10)+'px;">＿人人人＿<br />＞VIBES!＜<br />‾ＹＹＹＹ‾</div>');
-      $('.vibes').fadeOut(2000, function(){$(this).remove();});
+      vibes(data);
     });
 
   });
@@ -49,12 +59,12 @@
   <h1>This is vibe-writer</h1>
   <article id="paper">
     <p id="word"></p>
-  <p>Please type "<em></em>"</p>
+    <p>Please type " <em></em> "</p>
   </article>
   <article id="congrats">
-    <h1>SUPER VIBES!!</h1>
+    <h1>SUPER VIBES TIME!!</h1>
     <h2>Congratulations!</h2>
-    <h3></h3>
+    <h3>MAX VIBES <strong></strong> !!</h3>
   </article>
 </body>
 </html>
