--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" class="client">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
@@ -40,7 +40,9 @@
 </head>
 <body>
   <button type="button" name="chara"></button>
+  <!--
   <a href="./">reload</a>
   <button type="button" name="vibes">VIBES!</button>
+  -->
 </body>
 </html>
