--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     $('body').css('background', 'hsl('+ cval +',50%,50%)');
     $('button[name=vibes]').on(action, function(){
       ws.emit('vibes', cval);
+      if(Math.random()*5<=1) ws.emit('negotiation');
     });
     $('button[name=chara]').on(action, function() {
       ws.emit('chara', key);
@@ -34,6 +35,7 @@
 
     $(this).gShake(function() { 
       ws.emit('vibes', cval);
+      if(Math.random()*5<=1) ws.emit('negotiation');
     });
  });
 </script>
