--- a/view.html
+++ b/view.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Public view</title>
   <link rel="stylesheet" href="common.css">
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Noto+Serif' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" type="text/css" />
   <script src="/socket.io/socket.io.js"></script>
   <script src="/jquery.min.js"></script>
   <script>
