--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" class="client">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
   <title>Client view</title>
   <link rel="stylesheet" href="/common.css">
   <script src="/socket.io/socket.io.js"></script>
