--- a/view.html
+++ b/view.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Public view</title>
   <link rel="stylesheet" href="common.css">
   <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css" />
@@ -13,7 +13,11 @@
   $(function() {
     var ws = io.connect();
     var log = '';
-    var dict = ['act%','bad%','cut%','dig%','eye%','flee%','give%','hard%','idea%','joke%','kitten%','launch%','manual%','needle%','object%','passion%','quality%','rainbow%','science%','thirsty%','ultimate%','vacation%','weakness%','XxXxXxXxX%','yesterday%','zoo%'];
+    var dict = ['act%','bad%','cut%','dig%','eye%',
+                'flee%','give%','hard%','idea%','joke%',
+                'kitten%','launch%','manual%','needle%','object%',
+                'passion%','quality%','rainbow%','science%','thirsty%',
+                'ultimate%','vacation%','weakness%','XxXxXxXxX%','yesterday%','zoo%'];
     var dictCount = 0;
     var vibeCount = 0;
     var vibes = function(data){
@@ -22,11 +26,14 @@
       vibeCount = ($(".vibes").length>vibeCount)?$(".vibes").length:vibeCount;
       new Audio("vibe.ogg").play();
     };
-
+// DOM操作 
     $('em').text(dict[dictCount].slice(0,-1));
     $('#paper p small strong').text(dict[dictCount].length-1);
-
+// WebSocket通信
     ws.emit('now', dict[dictCount]);
+    ws.on('vibes', function(data) {
+      vibes(data);
+    });
     ws.on('chara', function(data, color) {
       new Audio("type.ogg").play();
       if(data=='%'){
@@ -35,14 +42,13 @@
         $('#word').append('<p class="bs"><- BackSpace</p>');
         $('.bs').fadeOut(1000, function(){$(this).remove();});
       } else {
-      log += data;
-      $('#word').append('<span class="text" style="color:hsl('+color+',50%,50%);">'+data+'</span>');
-      $('html,body').animate({ scrollTop: $(document).height() }, 'fast');
+        log += data;
+        $('#word').append('<span class="text" style="color:hsl('+color+',50%,50%);">'+data+'</span>');
+        $('html,body').animate({ scrollTop: $(document).height() }, 'fast');
         if(log.match(dict[dictCount].slice(0,-1))){
           $('article#congrats').css('display','block');
           $('article#congrats h3 strong').css('font-size', 16+vibeCount+'px').text(vibeCount);
-          for(i=0;i<vibeCount;i++)
-            setTimeout(function(){vibes(Math.round(Math.random()*360));},100*i);
+          for(i=0;i<vibeCount;i++) setTimeout(function(){vibes(Math.round(Math.random()*360));},100*i);
           setTimeout(function(){$('article#congrats').fadeOut();},3000);
           dictCount = (dict.length> (dictCount+1))? (dictCount+1): 0;
           log = '';
@@ -54,11 +60,6 @@
         }
       }
     });
-
-    ws.on('vibes', function(data) {
-      vibes(data);
-    });
-
   });
 </script>
 </head>
